--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>ThreeJS Starter</title>
 </head>
 <body>
+    <video id="video" src="/static/cascade.mp4" autoplay looped muted></video>
     <canvas class="webgl"></canvas>
 </body>
 </html>
