--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThreeJS Starter</title>
+    <title>cascade-vr</title>
 </head>
 <body>
     <video id="video" src="/static/cascade.mp4" autoplay looped muted></video>
